--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Maps\CODES_Map.cs" />
     <Compile Include="Maps\CODES_MYFZMR_Map.cs" />
     <Compile Include="Maps\CODES_PHONE_Map.cs" />
+    <Compile Include="Maps\CODES_QTES_Map.cs" />
     <Compile Include="Maps\CODES_WHYR_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Maps\ES_MYFZMR_FZXMXBJBXX_Map.cs" />
     <Compile Include="Maps\ES_MYFZMR_MRBJJBXX_Map.cs" />
     <Compile Include="Maps\ES_MYFZMR_MYETYPWJJBXX_Map.cs" />
+    <Compile Include="Maps\ES_QTES_ESSBJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_BJBDNJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_ESSJJBXX_Map.cs" />
     <Compile Include="Maps\ES_SJSM_PBDNJBXX_Map.cs" />
@@ -99,6 +101,7 @@
     <Compile Include="Models\CODES_JDJJBG.cs" />
     <Compile Include="Models\CODES_MYFZMR.cs" />
     <Compile Include="Models\CODES_PHONE.cs" />
+    <Compile Include="Models\CODES_QTES.cs" />
     <Compile Include="Models\CODES_WHYR.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
@@ -110,6 +113,7 @@
     <Compile Include="Models\ES_MYFZMR_FZXMXBJBXX.cs" />
     <Compile Include="Models\ES_MYFZMR_MRBJJBXX.cs" />
     <Compile Include="Models\ES_MYFZMR_MYETYPWJJBXX.cs" />
+    <Compile Include="Models\ES_QTES_ESSBJBXX.cs" />
     <Compile Include="Models\ES_SJSM_BJBDNJBXX.cs" />
     <Compile Include="Models\ES_SJSM_ESSJJBXX.cs" />
     <Compile Include="Models\ES_SJSM_PBDNJBXX.cs" />
