--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -169,6 +169,7 @@
     <Content Include="Areas\Business\Css\ES\ES_MYFZMR_FZXMXB.css" />
     <Content Include="Areas\Business\Css\ES\ES_MYFZMR_MRBJ.css" />
     <Content Include="Areas\Business\Css\ES\ES_MYFZMR_MYETYPWJ.css" />
+    <Content Include="Areas\Business\Css\ES\ES_QTES_CRYP.css" />
     <Content Include="Areas\Business\Css\ES\ES_QTES_ESSB.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_BJBDN.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_ESSJ.css" />
@@ -373,6 +374,8 @@
     <Content Include="Areas\Business\Scripts\Business\ES\ES_MYFZMR_MRBJYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_MYFZMR_MYETYPWJ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_MYFZMR_MYETYPWJYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_QTES_CRYP.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_QTES_CRYPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_QTES_ESSB.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_QTES_ESSBYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_BJBDN.js" />
@@ -760,6 +763,7 @@
     <Compile Include="Areas\Business\Controllers\ES\ES_MYFZMR_FZXMXBController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_MYFZMR_MRBJController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_MYFZMR_MYETYPWJController.cs" />
+    <Compile Include="Areas\Business\Controllers\ES\ES_QTES_CRYPJBXXController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_QTES_ESSBJBXXController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_BJBDNController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_ESSJController.cs" />
@@ -903,6 +907,7 @@
     <Content Include="Areas\Business\Views\ES_WHYL_TSYXRJ\ES_WHYL_TSYXRJ.cshtml" />
     <Content Include="Areas\Business\Views\ES_WHYL_WYXNWP\ES_WHYL_WYXNWP.cshtml" />
     <Content Include="Areas\Business\Views\ES_QTES_ESSB\ES_QTES_ESSB.cshtml" />
+    <Content Include="Areas\Business\Views\ES_QTES_CRYP\ES_QTES_CRYP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
