--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -59,6 +59,7 @@
     <Compile Include="IES_MYFZMR_MYETYPWJBLL.cs" />
     <Compile Include="IES_QTES_CRYPBLL.cs" />
     <Compile Include="IES_QTES_ESSBBLL.cs" />
+    <Compile Include="IES_QTES_GCQXBLL.cs" />
     <Compile Include="IES_SJSM_BJBDNBLL.cs" />
     <Compile Include="IES_SJSM_ESSJBLL.cs" />
     <Compile Include="IES_SJSM_PBDNBLL.cs" />
