--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -171,6 +171,7 @@
     <Content Include="Areas\Business\Css\ES\ES_MYFZMR_MYETYPWJ.css" />
     <Content Include="Areas\Business\Css\ES\ES_QTES_CRYP.css" />
     <Content Include="Areas\Business\Css\ES\ES_QTES_ESSB.css" />
+    <Content Include="Areas\Business\Css\ES\ES_QTES_GCQX.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_BJBDN.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_ESSJ.css" />
     <Content Include="Areas\Business\Css\ES\ES_SJSM_PBDN.css" />
@@ -378,6 +379,8 @@
     <Content Include="Areas\Business\Scripts\Business\ES\ES_QTES_CRYPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_QTES_ESSB.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_QTES_ESSBYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_QTES_GCQX.js" />
+    <Content Include="Areas\Business\Scripts\Business\ES\ES_QTES_GCQXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_BJBDN.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_BJBDNYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\ES\ES_SJSM_ESSJ.js" />
@@ -765,6 +768,7 @@
     <Compile Include="Areas\Business\Controllers\ES\ES_MYFZMR_MYETYPWJController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_QTES_CRYPJBXXController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_QTES_ESSBJBXXController.cs" />
+    <Compile Include="Areas\Business\Controllers\ES\ES_QTES_GCQXJBXXController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_BJBDNController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_ESSJController.cs" />
     <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_PBDNController.cs" />
@@ -908,6 +912,7 @@
     <Content Include="Areas\Business\Views\ES_WHYL_WYXNWP\ES_WHYL_WYXNWP.cshtml" />
     <Content Include="Areas\Business\Views\ES_QTES_ESSB\ES_QTES_ESSB.cshtml" />
     <Content Include="Areas\Business\Views\ES_QTES_CRYP\ES_QTES_CRYP.cshtml" />
+    <Content Include="Areas\Business\Views\ES_QTES_GCQX\ES_QTES_GCQX.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
