--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Maps\YHZHXX_Map.cs" />
     <Compile Include="Maps\YXJBXX_Map.cs" />
     <Compile Include="Maps\ZDDLXX_Map.cs" />
+    <Compile Include="Models\CL_MTCJBXX.cs" />
     <Compile Include="Models\CODES.cs" />
     <Compile Include="Models\CODES_CL.cs" />
     <Compile Include="Models\CODES_COMPUTER.cs" />
