--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -160,6 +160,7 @@
     <Content Include="Areas\Business\Css\BZZX\BZZX_SY_ZDJS.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_SY_ZHMM.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_WZJY.css" />
+    <Content Include="Areas\Business\Css\CL\CL_GCC.css" />
     <Content Include="Areas\Business\Css\CL\CL_HC.css" />
     <Content Include="Areas\Business\Css\CL\CL_MTC.css" />
     <Content Include="Areas\Business\Css\CL\CL_ZXCDDCSLC.css" />
@@ -361,6 +362,8 @@
     <Content Include="Areas\Business\Scripts\Business\BZZX\BZZX_SY_ZHMM.js" />
     <Content Include="Areas\Business\Scripts\Business\BZZX\BZZX_WZJY.js" />
     <Content Include="Areas\Business\Scripts\Business\BZZX\BZZX_WZJYZP.js" />
+    <Content Include="Areas\Business\Scripts\Business\CL\CL_GCC.js" />
+    <Content Include="Areas\Business\Scripts\Business\CL\CL_GCCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CL\CL_HC.js" />
     <Content Include="Areas\Business\Scripts\Business\CL\CL_HCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CL\CL_MTC.js" />
@@ -769,6 +772,7 @@
     <Compile Include="Areas\Business\Common\QRCodeHelper.cs" />
     <Compile Include="Areas\Business\Controllers\BZZX\BZZXController.cs" />
     <Compile Include="Areas\Business\Controllers\BZZX\WZYJController.cs" />
+    <Compile Include="Areas\Business\Controllers\CL\CL_GCCController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_HCController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_MTCController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_ZXCDDCSLCController.cs" />
@@ -936,6 +940,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Areas\Business\Views\CL_HC\CL_HC.cshtml" />
+    <Content Include="Areas\Business\Views\CL_GCC\CL_GCC.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
