--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -77,7 +77,7 @@
     <Compile Include="IFC_DZFBLL.cs" />
     <Compile Include="IFC_SPBLL.cs" />
     <Compile Include="IFC_XZLBLL.cs" />
-    <Compile Include="IFWCZJBXXBLL.cs" />
+    <Compile Include="IFC_ZZFJBXXBLL.cs" />
     <Compile Include="IHFCZBLL.cs" />
     <Compile Include="ILBXXBLL.cs" />
     <Compile Include="IRZGLBLL.cs" />
