--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -58,13 +58,12 @@
     <Compile Include="Maps\CL_MTCJBXX_Map.cs" />
     <Compile Include="Maps\CL_ZXCDDCSLCJBXX_Map.cs" />
     <Compile Include="Maps\CODES_CL_Map.cs" />
-    <Compile Include="Maps\CODES_COMPUTER_Map.cs" />
-    <Compile Include="Maps\CODES_JDJJBG_Map.cs" />
+    <Compile Include="Maps\CODES_ES_JDJJBG_Map.cs" />
     <Compile Include="Maps\CODES_FC_Map.cs" />
-    <Compile Include="Maps\CODES_MYFZMR_Map.cs" />
-    <Compile Include="Maps\CODES_PHONE_Map.cs" />
-    <Compile Include="Maps\CODES_QTES_Map.cs" />
-    <Compile Include="Maps\CODES_WHYR_Map.cs" />
+    <Compile Include="Maps\CODES_ES_MYFZMR_Map.cs" />
+    <Compile Include="Maps\CODES_ES_SJSM_Map.cs" />
+    <Compile Include="Maps\CODES_ES_QTES_Map.cs" />
+    <Compile Include="Maps\CODES_ES_WHYL_Map.cs" />
     <Compile Include="Maps\DISTRICT_Map.cs" />
     <Compile Include="Maps\DJJDJL_Map.cs" />
     <Compile Include="Maps\ES_JDJJBG_BGSBJBXX_Map.cs" />
@@ -108,12 +107,11 @@
     <Compile Include="Models\CL_MTCJBXX.cs" />
     <Compile Include="Models\CODES_FC.cs" />
     <Compile Include="Models\CODES_CL.cs" />
-    <Compile Include="Models\CODES_COMPUTER.cs" />
-    <Compile Include="Models\CODES_JDJJBG.cs" />
-    <Compile Include="Models\CODES_MYFZMR.cs" />
-    <Compile Include="Models\CODES_PHONE.cs" />
-    <Compile Include="Models\CODES_QTES.cs" />
-    <Compile Include="Models\CODES_WHYR.cs" />
+    <Compile Include="Models\CODES_ES_JDJJBG.cs" />
+    <Compile Include="Models\CODES_ES_MYFZMR.cs" />
+    <Compile Include="Models\CODES_ES_SJSM.cs" />
+    <Compile Include="Models\CODES_ES_QTES.cs" />
+    <Compile Include="Models\CODES_ES_WHYL.cs" />
     <Compile Include="Models\DISTRICT.cs" />
     <Compile Include="Models\DJJDJL.cs" />
     <Compile Include="Models\EncryptionHelper.cs" />
