--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IBZZXBLL.cs" />
     <Compile Include="ICL_GCCBLL.cs" />
     <Compile Include="ICL_HCBLL.cs" />
+    <Compile Include="ICL_KCBLL.cs" />
     <Compile Include="ICL_MTCBLL.cs" />
     <Compile Include="ICommonBLL.cs" />
     <Compile Include="IDAO.cs" />
