--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -162,6 +162,7 @@
     <Content Include="Areas\Business\Css\BZZX\BZZX_WZJY.css" />
     <Content Include="Areas\Business\Css\CL\CL_GCC.css" />
     <Content Include="Areas\Business\Css\CL\CL_HC.css" />
+    <Content Include="Areas\Business\Css\CL\CL_KC.css" />
     <Content Include="Areas\Business\Css\CL\CL_MTC.css" />
     <Content Include="Areas\Business\Css\CL\CL_ZXCDDCSLC.css" />
     <Content Include="Areas\Business\Css\Common\Top.css" />
@@ -366,6 +367,8 @@
     <Content Include="Areas\Business\Scripts\Business\CL\CL_GCCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CL\CL_HC.js" />
     <Content Include="Areas\Business\Scripts\Business\CL\CL_HCYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CL\CL_KC.js" />
+    <Content Include="Areas\Business\Scripts\Business\CL\CL_KCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CL\CL_MTC.js" />
     <Content Include="Areas\Business\Scripts\Business\CL\CL_MTCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\CL\CL_ZXCDDCSLC.js" />
@@ -775,6 +778,7 @@
     <Compile Include="Areas\Business\Controllers\BZZX\WZYJController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_GCCController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_HCController.cs" />
+    <Compile Include="Areas\Business\Controllers\CL\CL_KCController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_MTCController.cs" />
     <Compile Include="Areas\Business\Controllers\CL\CL_ZXCDDCSLCController.cs" />
     <Compile Include="Areas\Business\Controllers\CommonController.cs" />
@@ -943,6 +947,7 @@
     <Content Include="Areas\Business\Views\CL_HC\CL_HC.cshtml" />
     <Content Include="Areas\Business\Views\CL_GCC\CL_GCC.cshtml" />
     <Content Include="Areas\Business\Views\Shared\HTFBLayout.cshtml" />
+    <Content Include="Areas\Business\Views\CL_KC\CL_KC.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
