--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -55,6 +55,7 @@
     <Compile Include="BLL\BZZXBLL.cs" />
     <Compile Include="BLL\CL_GCCBLL.cs" />
     <Compile Include="BLL\CL_HCBLL.cs" />
+    <Compile Include="BLL\CL_KCBLL.cs" />
     <Compile Include="BLL\CL_MTCBLL.cs" />
     <Compile Include="BLL\CommonBLL.cs" />
     <Compile Include="BLL\CL_ZXCDDCSLCBLL.cs" />
